[tool.poetry]
name = "ContactsBook"
version = "0.1.3"
description = "Phonebook"
authors = ["HMixany <hmixany@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HMixany/CoreProject.git"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startbook = "ContactsBook.main:main"